@@ -306,6 +306,7 @@ enum reg_class {
 #define STATIC_CHAIN_REGNUM 2
 
 #define ELIMINABLE_REGS {					\
+      {ARG_POINTER_REGNUM, STACK_POINTER_REGNUM},		\
       {ARG_POINTER_REGNUM, FRAME_POINTER_REGNUM},		\
 	{FRAME_POINTER_REGNUM, STACK_POINTER_REGNUM}		\
        ,{FRAME_POINTER_REGNUM+1,STACK_POINTER_REGNUM+1}}
